# mosze-semester-project-gitanos

./: .gitignore  01_szgmvizsgarossz.game  04_mipositive.game  CMakeLists.txt  szoveges-kalandjatek.cpp  vegso-dokumentacio.docx
game/: CMakeLists.txt  classes.h  functions.h  game.cpp  game.sln  game.vcxproj  game.vcxproj.filters
gtest/: CMakeLists.txt  gtest.vcxproj  test_classes.cpp  unit_tests.cpp
specifikacio/: feladat.txt  generator-py.docx  mosze_twine.html  program-leiras.docx
story/: 000_test.game  01_egyetem.art.game  01_golyahet.game  01_kezdes.game  01_lapos.game  01_szgm_bejar.game  01_szgm_nemjarbe.game  01_szgmbuko.game  01_szgmvizsga.game  01_szgmvizsgajo.game  01_szgmvizsgalate.game  02_felev_kezdes.game  02_halo.game  02_halo_siker.game  02_halo_skip.game  02_kollab.game  02_kommism.game  02_kommism_02.game  02_kommism_eloadads.game  02_kommism_eloadas.game  02_kommism_vita.game  02_kommism_vizsga.game  02_robot.game  04_easyfizika.game  04_felev_kezdes.game  04_felevkezdes.game  04_fizika.game  04_fizikadone.game  04_fizikagovizsga.game  04_fizikahardvizsga.game  04_fizikano.game  04_fizikayes.game  04_mi.game  04_midone.game  04_mino.game  04_miyes.game  05_mosze.game  05_mosze_1ko_kesz.game  05_mosze_1ko_nem.game  05_mosze_2ko_kesz.game  (+17 more)
szoveges-kalandjatek/: Resource.h  szoveges-kalandjatek.cpp  szoveges-kalandjatek.rc  szoveges-kalandjatek.sln  szoveges-kalandjatek.vcxproj  szoveges-kalandjatek.vcxproj.filters
szoveges-kalandjatek-cli/: CMakeLists.txt  szoveges-kalandjatek-cli.cpp  szoveges-kalandjatek-cli.sln  szoveges-kalandjatek-cli.vcxproj  szoveges-kalandjatek-cli.vcxproj.filters
szoveges-kalandjatek-forms/: MyForm.h  ReadStory.h  szoveges-kalandjatek-forms.sln  szoveges-kalandjatek-forms.vcxproj  szoveges-kalandjatek-forms.vcxproj.filters
